gitops/docmost/base/docmost.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: docmost
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      volumes:
        - name: docmost-data
          persistentVolumeClaim:
            claimName: docmost-pvc
      containers:
        - name: docmost
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: docmost-data
              mountPath: /app/data/storage
          image: 'docmost/docmost:latest'
      securityContext:
        runAsUser: 0
