gitops/docmost/base/redis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis
          image: 'redis:7.2-alpine'
          resources: {}
          volumeMounts:
            - name: redis-data
              mountPath: /data
      securityContext:
        runAsUser: 0
